<resources>
    <string name="app_name">Slagalica</string>

    <string name="email_hint">Email</string>
    <string name="username_hint">Korisničko ime</string>
    <string name="password_hint">Lozinka</string>

    <string name="passwords_do_not_match_error">Lozinke se ne poklapaju!</string>
    <string name="all_fields_are_mandatory">Sva polja su obavezna!</string>

    <string name="login_title">Dobrodošli!</string>
    <string name="login_username_email_hint">Email ili korisničko ime</string>
    <string name="login_button">Prijavi se</string>
    <string name="forgot_password_prompt">Želite da promenite lozinku?</string>
    <string name="no_account_prompt">Nemate nalog? Registrujte se</string>

    <string name="register_title">Kreiraj nalog</string>
    <string name="region_hint">Region</string>
    <string name="repeat_password_hint">Ponovite lozinku</string>
    <string name="register_button">Registruj se</string>
    <string name="have_account_prompt">Već imaš nalog? Prijavi se</string>
    <string name="reset_password_title">Promena lozinke</string>

    <string-array name="regioni_srbije">
        <item>Vojvodina</item>
        <item>Beograd</item>
        <item>Šumadija i Zapadna Srbija</item>
        <item>Južna i Istočna Srbija</item>
    </string-array>

    <string name="reset_username_email_hint">Email ili korisničko ime</string>
    <string name="old_password_hint">Stara lozinka</string>
    <string name="new_password_hint">Nova lozinka</string>
    <string name="repeat_new_password_hint">Ponovite novu lozinku</string>
    <string name="confirm_button">Potvrdi</string>

    <string name="moj_broj_delete">Obriši</string>
    <string name="moj_broj_confirm">Potvrdi</string>
    <string name="continue_as_guest">Nastavi kao gost</string>

    <string name="notification_screen_title">Obaveštenja</string>
    <string name="notification_filter_all">Sve</string>
    <string name="notification_filter_unread">Nepročitano</string>
    <string name="notification_filter_read">Pročitano</string>
    <string name="notification_mark_as_read">Označi kao pročitano</string>
    <string name="notification_empty_state">Nema obaveštenja</string>
    <string name="notification_unread_count">%d nepročitanih</string>

    <string name="notification_channel_cet">Čet</string>
    <string name="notification_channel_cet_desc">Poruke i pozivi od prijatelja</string>
    <string name="notification_channel_rangiranje">Rangiranje</string>
    <string name="notification_channel_rangiranje_desc">Obaveštenja o plasmanu na rang listi</string>
    <string name="notification_channel_nagrade">Nagrade</string>
    <string name="notification_channel_nagrade_desc">Nagrade, bedževi i dostignuća</string>
    <string name="notification_channel_ostalo">Ostalo</string>
    <string name="notification_channel_ostalo_desc">Sistemska i ostala obaveštenja</string>

    <string name="home_tokens">Tokeni: %d</string>
    <string name="home_stars">Zvezde: %d</string>
    <string name="home_league">Liga: %s</string>
    <string name="home_guest">Gost</string>
    <string name="home_tokens_guest">Tokeni: nedostupno</string>
    <string name="home_stars_guest">Zvezde: nedostupno</string>

    <!-- Izazov (spec 9) -->
    <string name="challenge_screen_title">Izazovi</string>
    <string name="challenge_empty_state">Trenutno nema otvorenih izazova.</string>
    <string name="challenge_refresh">Osveži</string>
    <string name="challenge_create_fab">Napravi izazov</string>
    <string name="challenge_create_title">Novi izazov</string>
    <string name="challenge_create_stars_label">Ulog u zvezdama: %d</string>
    <string name="challenge_create_tokens_label">Ulog u tokenima: %d</string>
    <string name="challenge_create_confirm">Napravi</string>
    <string name="challenge_cancel">Otkaži</string>
    <string name="challenge_item_creator">Domaćin: %s</string>
    <string name="challenge_item_stake">★ %1$d zvezda • %2$d tokena</string>
    <string name="challenge_item_participants">%1$d/%2$d igrača</string>
    <string name="challenge_lobby_title">Lobi izazova</string>
    <string name="challenge_lobby_waiting">Čekanje na učesnike…</string>
    <string name="challenge_lobby_start">Pokreni izazov</string>
    <string name="challenge_lobby_leave">Napusti</string>
    <string name="challenge_lobby_you_suffix"> (ti)</string>
    <string name="challenge_lobby_host_suffix"> (domaćin)</string>
    <string name="challenge_lobby_cancelled">Domaćin je otkazao izazov.</string>
    <string name="challenge_lobby_need_more">Potreban je još bar jedan igrač da bi domaćin mogao da pokrene izazov.</string>
    <string name="challenge_match_waiting_title">Sačekajte ostale igrače…</string>
    <string name="challenge_match_waiting_subtitle">Vaš rezultat je prijavljen.</string>
    <string name="challenge_result_title">Izazov završen!</string>
    <string name="challenge_result_row">%1$d. %2$s — %3$d bod. (★%4$s • %5$s tok.)</string>

    <string name="chat_screen_title">Čet</string>
    <string name="chat_empty_state">Nemate još nijedan razgovor. Pokrenite novi preko + dugmeta.</string>
    <string name="chat_new_fab">Novi razgovor</string>
    <string name="chat_search_title">Pronađi korisnika</string>
    <string name="chat_search_hint">Regex izraz nad korisničkim imenom</string>
    <string name="chat_search_helper">Pretraga je ograničena na korisnike iz vašeg regiona.</string>
    <string name="chat_search_empty_state">Nema korisnika koji se poklapaju sa izrazom.</string>
    <string name="chat_conversation_title">Razgovor</string>
    <string name="chat_prefix_me">Vi</string>
    <string name="chat_last_message_format">%1$s: %2$s</string>
    <string name="chat_message_hint">Poruka…</string>
    <string name="chat_send">Pošalji</string>

    <!-- Zajednički nizovi za igre (Ko zna zna, Spojnice, Moj broj, Korak po korak) -->
    <string name="game_player1_score">Igrač 1\n%d</string>
    <string name="game_player2_score">Igrač 2\n%d</string>
    <string name="game_round_label">Runda %d</string>
    <string name="game_active_player">Na potezu: Igrač %d</string>
    <string name="game_question_progress">Pitanje %1$d / %2$d</string>
    <string name="game_next_round">Sledeća runda</string>
    <string name="game_over">Kraj igre</string>

    <string name="asocijacije_round_label">Runda %d / 2</string>
    <string name="asocijacije_active_player">Na potezu: Igrač %s</string>
    <string name="asocijacije_player1_score">Igrač 1\n%d</string>
    <string name="asocijacije_player2_score">Igrač 2\n%d</string>

    <string name="skocko_round_label">Runda %d / 2</string>
    <string name="skocko_player1_score">Igrač 1\n%d</string>
    <string name="skocko_player2_score">Igrač 2\n%d</string>
    <string name="skocko_submit">Potvrdi</string>
    <string name="skocko_erase">Briši</string>
    <string name="skocko_next_round">Sledeća runda</string>
    <string name="skocko_game_over">Kraj igre</string>
    <string name="skocko_bonus_row">Bonus</string>
    <string name="skocko_solution_row">Rešenje</string>
    <string name="skocko_status_main_turn">Na potezu: Igrač %s</string>
    <string name="skocko_status_bonus_turn">Bonus potez: Igrač %s</string>
    <string name="skocko_status_solved_main">Igrač %s pogodio!</string>
    <string name="skocko_status_solved_bonus">Igrač %s pogodio bonus!</string>
    <string name="skocko_status_no_one">Niko nije pogodio.</string>
    <string name="skocko_status_winner">Pobedio Igrač %s!</string>
    <string name="skocko_status_draw">Nerešeno!</string>
    <string name="change_password">Promeni lozinku</string>

    <!-- Profil (spec 2) -->
    <string name="profile_region">Region: %s</string>
    <string name="profile_choose_avatar">Izaberi avatar</string>
    <string name="profile_avatar_error">Greška pri izmeni avatara.</string>
    <string name="profile_load_error">Ne mogu da učitam podatke profila.</string>
    <string name="profile_guest_only">Profil je dostupan samo prijavljenim igračima.</string>
    <string name="profile_breakdown_step">Po koraku:</string>
    <string name="profile_breakdown_attempt">Po pokušaju:</string>
    <string name="common_cancel">Otkaži</string>

    <!-- Prijatelji (spec 7) -->
    <string name="friends_screen_title">Prijatelji</string>
    <string name="friends_empty_state">Još uvek nemate prijatelje.</string>
    <string name="friends_add">Dodaj</string>
    <string name="friends_requests">Zahtevi</string>
    <string name="friends_requests_count">Zahtevi (%d)</string>
    <string name="friends_requests_empty">Nema novih zahteva.</string>
    <string name="friends_avatar_desc">Avatar</string>
    <string name="friends_league_desc">Liga</string>
    <string name="friends_invite">Pozovi</string>
    <string name="friends_invite_failed">Slanje poziva nije uspelo.</string>
    <string name="friends_invite_declined">Poziv je odbijen.</string>
    <string name="friends_invite_expired">Poziv je istekao.</string>
    <string name="friends_waiting_title">Poziv poslat</string>
    <string name="friends_waiting_message">Čeka se da %s prihvati…</string>
    <string name="friends_incoming_title">Poziv na partiju</string>
    <string name="friends_incoming_message">%s vas poziva na partiju.</string>
    <string name="friends_incoming_message_countdown">%1$s vas poziva na partiju. (%2$d s)</string>
    <string name="friends_accept">Prihvati</string>
    <string name="friends_decline">Odbij</string>
    <string name="friends_new_request">%s vam je poslao zahtev za prijateljstvo.</string>
    <string name="friends_remove_title">Ukloni prijatelja</string>
    <string name="friends_remove_message">Ukloniti %s iz liste prijatelja?</string>
    <string name="friends_remove_confirm">Ukloni</string>
    <string name="friends_search_hint">Korisničko ime</string>
    <string name="friends_search_empty">Nema rezultata.</string>
    <string name="friends_scan_qr">QR</string>
    <string name="friends_scan_prompt">Skenirajte QR kod prijatelja</string>
    <string name="friends_request_sent">Zahtev poslat.</string>
    <string name="friends_request_failed">Slanje zahteva nije uspelo.</string>

    <!-- Regioni (spec 5) -->
    <string name="regions_screen_title">Regioni</string>
    <string name="regions_ranking_title">Mesečni rang regiona</string>
    <string name="regions_cycle_range">Ciklus: %1$s – %2$s</string>
    <string name="regions_mine_suffix">%s (vaš region)</string>
    <string name="regions_icon_desc">Ikona regiona</string>
    <string name="regions_stats_error">Ne mogu da učitam statistiku regiona.</string>
    <string name="regions_stat_first">Prva mesta: %d</string>
    <string name="regions_stat_second">Druga mesta: %d</string>
    <string name="regions_stat_third">Treća mesta: %d</string>
    <string name="regions_stat_active">Aktivnih igrača: %d</string>
    <string name="regions_stat_registered">Registrovanih igrača: %d</string>

    <string name="back">Nazad</string>
    <string name="leaderboard_title">Rang Lista</string>
    <string name="leaderboard_tab_weekly">Nedeljno</string>
    <string name="leaderboard_tab_monthly">Mesečno</string>
    <string name="leaderboard_cycle_range">%1$s – %2$s</string>
    <string name="leaderboard_my_rank">Vaš rang: #%d</string>
    <string name="leaderboard_stars">%d ★</string>
    <string name="leaderboard_empty">Nema igrača u ovom ciklusu</string>
    <string name="league_icon_desc">Liga</string>
    <string name="reward_title">Čestitamo!</string>
    <string name="reward_rank">Zauzeli ste %1$d. mesto (%2$s)</string>
    <string name="reward_tokens">Nagrada: %d tokena</string>
    <string name="reward_dismiss">Preuzmi nagradu</string>
    <string name="btn_leaderboard">Rang lista</string>

</resources>